--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,6 @@
     <color name="image_overlay_color">#DD000000</color>
     <color name="light_gray">#D3D3D3</color>
 
+    <color name="logout_button_color">#FF3B30</color> <!-- Red color for logout button -->
+
 </resources>
