--- a/app/src/main/res/layout/registration_screen.xml
+++ b/app/src/main/res/layout/registration_screen.xml
@@ -6,7 +6,7 @@
     android:background="@color/purple_500"
     android:padding="16dp">
 
-    <!-- Top Illustration -->
+    <!-- Image and Title -->
     <ImageView
         android:id="@+id/registerImage"
         android:layout_width="200dp"
@@ -18,7 +18,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="50dp" />
 
-    <!-- Title -->
     <TextView
         android:id="@+id/registerTitle"
         android:layout_width="wrap_content"
@@ -32,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp" />
 
-    <!-- Name Field -->
+    <!-- Input Fields and Register Button -->
     <EditText
         android:id="@+id/nameField"
         android:layout_width="0dp"
@@ -48,7 +47,6 @@
         android:layout_marginTop="16dp"
         app:layout_constraintWidth_percent="0.8" />
 
-    <!-- Email Field -->
     <EditText
         android:id="@+id/emailField"
         android:layout_width="0dp"
@@ -64,7 +62,6 @@
         android:layout_marginTop="16dp"
         app:layout_constraintWidth_percent="0.8" />
 
-    <!-- Password Field -->
     <EditText
         android:id="@+id/passwordField"
         android:layout_width="0dp"
